force-app/main/default/objects/JBT_RET_GENERAL_RIGHT__x/JBT_RET_GENERAL_RIGHT__x.object-meta.xml
<CustomObject>
    <description>Data source script can be found here: https://docs.google.com/document/d/1jJnsKUQV01dJSCPE8vxOBMcGqMFNjhXHXEpmFeSY6bo/edit</description>
    <externalDataSource>MuleOdataApi</externalDataSource>
    <externalName>JBT_RET_GENERAL_RIGHTs</externalName>
    <label>Student Program Data (external)</label>
    <pluralLabel>Student Program Data (external)</pluralLabel>
</CustomObject>