force-app/main/default/objects/JBT_RET_GENERAL_RIGHT__x/fields/ACAD_CAREER__c.field-meta.xml
<CustomField>
    <fullName>ACAD_CAREER__c</fullName>
    <description>Data sourced from ASU_STDNT_PROFILE_MAJ_TERM.ACAD_CAREER</description>
    <externalDeveloperName>ACAD_CAREER</externalDeveloperName>
    <label>Career</label>
    <length>4</length>
    <type>Text</type>
</CustomField>