force-app/main/default/objects/JBT_RET_GENERAL_RIGHT__x/fields/ADM_APPL_DT__c.field-meta.xml
<CustomField>
    <fullName>ADM_APPL_DT__c</fullName>
    <description>Data sourced from ASU_A_ADM_ARCH.ADM_APPL_DT</description>
    <externalDeveloperName>ADM_APPL_DT</externalDeveloperName>
    <label>Application Date</label>
    <type>Date</type>
</CustomField>