force-app/main/default/objects/JBT_RET_GENERAL_RIGHT__x/fields/ADM_APPL_PROG__c.field-meta.xml
<CustomField>
    <fullName>ADM_APPL_PROG__c</fullName>
    <description>Data sourced from ASU_A_ADM_ARCH.ADM_APPL_PROG</description>
    <externalDeveloperName>ADM_APPL_PROG</externalDeveloperName>
    <label>Applied Program</label>
    <length>60</length>
    <type>Text</type>
</CustomField>