force-app/main/default/objects/JBT_RET_GENERAL_RIGHT__x/fields/ADMIT_TERM__c.field-meta.xml
<CustomField>
    <fullName>ADMIT_TERM__c</fullName>
    <description>Data sourced from ASU_A_ADM_ARCH.LAST_AD_ADMIT_TERM</description>
    <externalDeveloperName>ADMIT_TERM</externalDeveloperName>
    <label>Admitted Term</label>
    <length>4</length>
    <referenceTargetField>Term__c.PeopleSoft_Code__c</referenceTargetField>
    <referenceTo>Term__c</referenceTo>
    <relationshipLabel>Student Program Data (external)</relationshipLabel>
    <relationshipName>Student_Program_Data_external2</relationshipName>
    <type>IndirectLookup</type>
</CustomField>