force-app/main/default/objects/JBT_RET_GENERAL_RIGHT__x/fields/ADMIT_TYPE__c.field-meta.xml
<CustomField>
    <fullName>ADMIT_TYPE__c</fullName>
    <description>Data sourced from ASU_A_ADM_ARCH.ADMIT_TYPE</description>
    <externalDeveloperName>ADMIT_TYPE</externalDeveloperName>
    <label>Admitted Type</label>
    <length>3</length>
    <type>Text</type>
</CustomField>