force-app/main/default/objects/JBT_RET_GENERAL_RIGHT__x/fields/APPT_DT__c.field-meta.xml
<CustomField>
    <fullName>APPT_DT__c</fullName>
    <description>Data sourced from PS_APPOINTMENT_TBL.APPT_START_DATE &amp; APPT_START_TIME</description>
    <externalDeveloperName>APPT_DT</externalDeveloperName>
    <label>Appointment Date</label>
    <type>Date</type>
</CustomField>