force-app/main/default/objects/JBT_RET_GENERAL_RIGHT__x/fields/ASU_CITZN_COUNTRY__c.field-meta.xml
<CustomField>
    <fullName>ASU_CITZN_COUNTRY__c</fullName>
    <description>Data sourced from PS_ASU_D_PERSON_VW.ASU_CITZN_COUNTRY</description>
    <externalDeveloperName>ASU_CITZN_COUNTRY</externalDeveloperName>
    <label>Country of Citizenship</label>
    <length>3</length>
    <type>Text</type>
</CustomField>