force-app/main/default/objects/JBT_RET_GENERAL_RIGHT__x/fields/CAMPUS__c.field-meta.xml
<CustomField>
    <fullName>CAMPUS__c</fullName>
    <description>Data sourced from ASU_STDNT_PROFILE_MAJ_CURRENT.CAMPUS</description>
    <externalDeveloperName>CAMPUS</externalDeveloperName>
    <label>Campus</label>
    <length>80</length>
    <type>Text</type>
</CustomField>