force-app/main/default/objects/JBT_RET_GENERAL_RIGHT__x/fields/CURR_ADMIT_TYPE__c.field-meta.xml
<CustomField>
    <fullName>CURR_ADMIT_TYPE__c</fullName>
    <description>Data sourced from ASU_STDNT_PROFILE_MAJ_CURRENT.ADMIT_TYPE</description>
    <externalDeveloperName>CURR_ADMIT_TYPE</externalDeveloperName>
    <label>Current Admit Type</label>
    <length>3</length>
    <type>Text</type>
</CustomField>