force-app/main/default/objects/JBT_RET_GENERAL_RIGHT__x/fields/CURR_PLAN__c.field-meta.xml
<CustomField>
    <fullName>CURR_PLAN__c</fullName>
    <description>Data sourced from ASU_STDNT_PROFILE_MAJ_CURRENT.TRNSCR_DESCR</description>
    <externalDeveloperName>CURR_PLAN</externalDeveloperName>
    <label>Current Plan</label>
    <length>100</length>
    <type>Text</type>
</CustomField>