force-app/main/default/objects/JBT_RET_GENERAL_RIGHT__x/fields/CURR_PROG__c.field-meta.xml
<CustomField>
    <fullName>CURR_PROG__c</fullName>
    <description>Data sourced from ASU_STDNT_PROFILE_MAJ_CURRENT.ACAD_PROG_DESCR</description>
    <externalDeveloperName>CURR_PROG</externalDeveloperName>
    <label>Current Program</label>
    <length>30</length>
    <type>Text</type>
</CustomField>