force-app/main/default/objects/JBT_RET_GENERAL_RIGHT__x/fields/ENRL_DEPOSIT__c.field-meta.xml
<CustomField>
    <fullName>ENRL_DEPOSIT__c</fullName>
    <description>Data sourced from PS_ASU_AD0107_STAT.Derived Enrollment</description>
    <externalDeveloperName>ENRL_DEPOSIT</externalDeveloperName>
    <label>Enrollment Deposit</label>
    <length>3</length>
    <type>Text</type>
</CustomField>