force-app/main/default/objects/JBT_RET_GENERAL_RIGHT__x/fields/ENRL_HRS__c.field-meta.xml
<CustomField>
    <fullName>ENRL_HRS__c</fullName>
    <description>Data sourced from ASU_STDNT_PROFILE_TERM.ASU_STATE_UNT_TAK + ASU_NSTATE_UNT_TAK</description>
    <externalDeveloperName>ENRL_HRS</externalDeveloperName>
    <label>Total Enrolled Hours</label>
    <precision>9</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>