force-app/main/default/objects/JBT_RET_GENERAL_RIGHT__x/fields/ENRL_PENDING__c.field-meta.xml
<CustomField>
    <fullName>ENRL_PENDING__c</fullName>
    <description>Data sourced from ASU_STDNT_PROFILE_MAJ_TERM.ASU_ENROLL_STAT</description>
    <externalDeveloperName>ENRL_PENDING</externalDeveloperName>
    <label>Enrollment Pending</label>
    <length>1</length>
    <type>Text</type>
</CustomField>