force-app/main/default/objects/JBT_RET_GENERAL_RIGHT__x/fields/ENROLL_OPEN_DT__c.field-meta.xml
<CustomField>
    <fullName>ENROLL_OPEN_DT__c</fullName>
    <description>Data sourced from PS_SESSION_TBL.ENROLL_OPEN_DT</description>
    <externalDeveloperName>ENROLL_OPEN_DT</externalDeveloperName>
    <label>Enrollment Open Date</label>
    <type>Date</type>
</CustomField>