force-app/main/default/objects/JBT_RET_GENERAL_RIGHT__x/fields/ENROLLED__c.field-meta.xml
<CustomField>
    <fullName>ENROLLED__c</fullName>
    <description>Data sourced from ASU_STDNT_PROFILE_MAJ_TERM.ASU_ENROLL_STAT</description>
    <externalDeveloperName>ENROLLED</externalDeveloperName>
    <label>Currently Enrolled</label>
    <length>1</length>
    <type>Text</type>
</CustomField>