force-app/main/default/objects/JBT_RET_GENERAL_RIGHT__x/fields/EXP_GRAD_TERM__c.field-meta.xml
<CustomField>
    <fullName>EXP_GRAD_TERM__c</fullName>
    <description>Data sourced from ASU_STDNT_PROFILE_MAJ_TERM.EXP_GRAD_TERM</description>
    <externalDeveloperName>EXP_GRAD_TERM</externalDeveloperName>
    <label>Expected Graduation Term</label>
    <length>4</length>
    <referenceTargetField>Term__c.PeopleSoft_Code__c</referenceTargetField>
    <referenceTo>Term__c</referenceTo>
    <relationshipLabel>Student Program Data (external)</relationshipLabel>
    <relationshipName>Student_Program_Data_external1</relationshipName>
    <type>IndirectLookup</type>
</CustomField>