force-app/main/default/objects/JBT_RET_GENERAL_RIGHT__x/fields/FERPA_LVL__c.field-meta.xml
<CustomField>
    <fullName>FERPA_LVL__c</fullName>
    <description>Data sourced from PS_ASU_D_PERSON_VW.ASU_SIS_DIR_RL_FLG</description>
    <externalDeveloperName>FERPA_LVL</externalDeveloperName>
    <label>FERPA Directory Hold</label>
    <length>35</length>
    <type>Text</type>
</CustomField>