force-app/main/default/objects/JBT_RET_GENERAL_RIGHT__x/fields/FINANCIAL_NEED_LVL__c.field-meta.xml
<CustomField>
    <fullName>FINANCIAL_NEED_LVL__c</fullName>
    <description>Data sourced from PS_ASU_FA_P_YR_VW.Derived FA Need Level</description>
    <externalDeveloperName>FINANCIAL_NEED_LVL</externalDeveloperName>
    <label>Financial Aid Need Level</label>
    <length>10</length>
    <type>Text</type>
</CustomField>