force-app/main/default/objects/JBT_RET_GENERAL_RIGHT__x/fields/ORIENT_DT__c.field-meta.xml
<CustomField>
    <fullName>ORIENT_DT__c</fullName>
    <description>Data sourced from OR_RESERVATIONS_VW.CREATEDDATETIME</description>
    <externalDeveloperName>ORIENT_DT</externalDeveloperName>
    <label>Orientation Date</label>
    <type>Date</type>
</CustomField>