force-app/main/default/objects/JBT_RET_GENERAL_RIGHT__x/fields/PROG_STATUS__c.field-meta.xml
<CustomField>
    <fullName>PROG_STATUS__c</fullName>
    <description>Data sourced from ASU_A_ADM_ARCH.LAST_PROG_STATUS</description>
    <externalDeveloperName>PROG_STATUS</externalDeveloperName>
    <label>Program Status</label>
    <length>2</length>
    <type>Text</type>
</CustomField>