force-app/main/default/objects/JBT_RET_GENERAL_RIGHT__x/fields/RESIDENCY__c.field-meta.xml
<CustomField>
    <fullName>RESIDENCY__c</fullName>
    <description>Data sourced from ASU_STDNT_PROFILE_MAJ_TERM.RESIDENCY</description>
    <externalDeveloperName>RESIDENCY</externalDeveloperName>
    <label>Residency</label>
    <length>15</length>
    <type>Text</type>
</CustomField>