force-app/main/default/objects/JBT_RET_GENERAL_RIGHT__x/fields/STRM__c.field-meta.xml
<CustomField>
    <fullName>STRM__c</fullName>
    <description>Data sourced from ASU_STDNT_PROFILE_MAJ_TERM.STRM</description>
    <externalDeveloperName>STRM</externalDeveloperName>
    <label>Term</label>
    <length>4</length>
    <referenceTargetField>Term__c.PeopleSoft_Code__c</referenceTargetField>
    <referenceTo>Term__c</referenceTo>
    <relationshipLabel>Student Program Data (external)</relationshipLabel>
    <relationshipName>Student_Program_Data_external</relationshipName>
    <type>IndirectLookup</type>
</CustomField>