force-app/main/default/objects/JBT_RET_GENERAL_RIGHT__x/fields/SUB_PLAN__c.field-meta.xml
<CustomField>
    <fullName>SUB_PLAN__c</fullName>
    <description>Data sourced from ASU_STDNT_PROFILE_MAJ_CURRENT.ASU_ACD_SPLAN_DESC</description>
    <externalDeveloperName>SUB_PLAN</externalDeveloperName>
    <label>Current Subplan</label>
    <length>30</length>
    <type>Text</type>
</CustomField>