force-app/main/default/objects/JBT_RET_GENERAL_RIGHT__x/fields/WUE__c.field-meta.xml
<CustomField>
    <fullName>WUE__c</fullName>
    <description>WUE</description>
    <externalDeveloperName>WUE</externalDeveloperName>
    <label>WUE</label>
    <length>128</length>
    <type>Text</type>
</CustomField>